Polish Status Codes
Adjusted code styling to avoid nested ifs

Closes gh-11725